--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        
+        <figure>
+            <img src="./assets/icons/bata-bit.svg" alt="Bata Bit logo">
+        </figure>
     </header>
 
     <main>
