--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/mobile.css">
+    <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width:768px)">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Bata Bit</title>
 </head>
 <body>
-    <header>
-        <figure>
-            <img src="./assets/icons/bata-bit.svg" alt="Bata Bit logo">
+    <header class="header">
+        <figure class="bata-bit-header-logo-container">
+            <img class="bata-bit-header-logo" src="./assets/icons/bata-bit.svg" alt="Bata Bit logo">
         </figure>
+        <h1 class="header-h1">
+            La próxima revolución en el intercambio de criptomonedas.
+        </h1>
+        <h2 class="header-h2">
+            Batatabit te ayuda a navegar entre los diferentes precios y tendencias.
+        </h2>
+        <a class="header-button" href="#">
+            <span>Conoce Nuestros Planes</span>
+            <figure>
+                    <img src="./assets/icons/down-arrow.svg">
+            </figure>
+        </a>
     </header>
-
+    
     <main>
         <section></section>
         <section></section>
