Upper part of section 1 implemented

--- a/index.html
+++ b/index.html
@@ -24,16 +24,28 @@
         <a class="header-button" href="#">
             <span>Conoce Nuestros Planes</span>
             <figure>
-                    <img src="./assets/icons/down-arrow.svg">
+                    <img class="down-arrow" src="./assets/icons/down-arrow.svg">
             </figure>
         </a>
     </header>
     
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section class="exchange-rates">
+            <div class="bitcoin-svg-container">
+                <figure>
+                    <img class="bitcoin-svg"src="./assets/img/bitcoin.svg" alt="">
+                </figure>
+            </div>
+            <section>
+            <h1 class="exchange-rates-h1">Visibilizamos todas las tasas de cambio.</h1>
+            <p class="exchange-rates-paragraph">
+                Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
+            </p>
+            </section>
+            <section class="coins">
+                <h2 class="exchange-rates-h2">Monedas</h2>
+            </section>
+        </section>
     </main>
 
     <footer>
