--- a/index.html
+++ b/index.html
@@ -42,8 +42,39 @@
                 Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
             </p>
             </section>
-            <section class="coins">
+            <section class="coins-section">
                 <h2 class="exchange-rates-h2">Monedas</h2>
+                <div class="coin-1">
+                    <p class="coin-name">Bitcoin</p>
+                    <p class="coin-price">$ 1.96</p>
+                    <figure>
+                        <img src="./assets/icons/trending-down.svg" alt="">
+                    </figure>
+                </div>
+                <div class="coin-2">
+                    <p class="coin-name">Ethereum</p>
+                    <p class="coin-price">$ 0.07</p>
+                    <figure>
+                        <img src="./assets/icons/trending-up.svg" alt="">
+                    </figure>
+                </div>
+                <div class="coin-3">
+                    <p class="coin-name">Ripple</p>
+                    <p class="coin-price">$ 2.25</p>
+                    <figure>
+                        <img src="./assets/icons/trending-down.svg" alt="">
+                    </figure>
+                </div>
+                <div class="coin-4">
+                    <p class="coin-name">Stellar</p>
+                    <p class="coin-price">$ 4.96</p>
+                    <figure>
+                        <img src="./assets/icons/trending-down.svg" alt="">
+                    </figure>
+                </div>
+                <div class="coins-section-last-update">
+                    <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
+                </div>
             </section>
         </section>
     </main>
