--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </figure>
             </div>
             <section>
-            <h1 class="exchange-rates-h1">Visibilizamos todas las tasas de cambio.</h1>
+            <h2 class="exchange-rates-h1">Visibilizamos todas las tasas de cambio.</h2>
             <p class="exchange-rates-paragraph">
                 Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
             </p>
@@ -75,6 +75,11 @@
                 <div class="coins-section-last-update">
                     <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
                 </div>
+                
+                    <figure class="coins-section-arrow">
+                        <a class="coins-section-arrow-hyper" href="#"></a>
+                        <img src="./assets/icons/right-arrow.svg" alt="">
+                    </figure>
             </section>
         </section>
     </main>
