Exchange rates section implemented.

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 </figure>
             </div>
             <section>
-            <h1 class="exchange-rates-h1">Visibilizamos todas las tasas de cambio.</h1>
-            <p class="exchange-rates-paragraph">
-                Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
-            </p>
+                <h2 class="exchange-rates-h1">Visibilizamos todas las tasas de cambio.</h2>
+                <p class="exchange-rates-paragraph">
+                    Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.
+                </p>
             </section>
             <section class="coins-section">
                 <h2 class="exchange-rates-h2">Monedas</h2>
@@ -75,6 +75,11 @@
                 <div class="coins-section-last-update">
                     <p><strong>Actualizado:</strong> 19 Julio 23:45</p>
                 </div>
+                
+                    <figure class="coins-section-arrow">
+                        <a class="coins-section-arrow-hyper" href="#"></a>
+                        <img src="./assets/icons/right-arrow.svg" alt="">
+                    </figure>
             </section>
         </section>
     </main>
