--- a/index.html
+++ b/index.html
@@ -82,6 +82,40 @@
                     </figure>
             </section>
         </section>
+
+        <section class="benefits">
+            <h2 class="benefits--h1">Creamos un producto sin comparación.</h2>
+            <p class="benefits--p">Confiable y diseñado para uso diario.</p>
+            <section class="benefits--section1">
+                <figure>
+                    <img src="./assets/icons/clock.svg" alt="">
+                </figure>
+                <h3>Tiempo Real</h3>
+                <p>Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+            </section>
+            <section class="benefits--section2">
+                <figure>
+                    <img src="./assets/icons/eye.svg" alt="">
+                </figure>
+                <h3>No hay tasas escondidas</h3>
+                <p>Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+            </section>
+            <section class="benefits--section3">
+                <figure>
+                    <img src="./assets/icons/dollar-sign.svg" alt="">
+                </figure>
+                <h3>Compara monedas</h3>
+                <p>No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+            </section>
+            <section class="benefits--section4">
+                <figure>
+                    <img src="./assets/icons/check-circle.svg" alt="">
+                </figure>
+                <h3>Información confiable</h3>
+                <p>Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+            </section>
+        </section>
+
     </main>
 
     <footer>
