section 3 image positioned.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
                         <a class="coins-section-arrow-hyper" href="#"></a>
                         <img src="./assets/icons/right-arrow.svg" alt="">
                     </figure>
-<<<<<<< HEAD
-=======
             </section>
         </section>
 
@@ -115,10 +113,15 @@
                 </figure>
                 <h3>Información confiable</h3>
                 <p>Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
->>>>>>> section-2
             </section>
         </section>
 
+        <section class="plans">
+            <figure>
+                <img class="plans--bitcoinbaby" src="./assets/img/bitcoinbaby.jpg" alt="Girl with bitcoins as glasses.">
+                <figcaption>Conócelo hoy.</figcaption> <!-- max-width: 40.0rem -->
+            </figure>
+        </section>
     </main>
 
     <footer>
