Upper part of section 3 implemented.

--- a/index.html
+++ b/index.html
@@ -119,8 +119,10 @@
         <section class="plans">
             <figure>
                 <img class="plans--bitcoinbaby" src="./assets/img/bitcoinbaby.jpg" alt="Girl with bitcoins as glasses.">
-                <figcaption>Conócelo hoy.</figcaption> <!-- max-width: 40.0rem -->
+                <figcaption class="plans--bitcoinbaby-figcaption">Conócelo hoy.</figcaption> <!-- max-width: 40.0rem -->
             </figure>
+            <h2 class="plans--h2">Escoge el plan que mejor se ajuste a ti.</h2>
+            <p class="plans--p">Cualquier plan te da acceso completo a nuestra plataforma.</p>
         </section>
     </main>
 
