--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width:768px)">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Bata Bit</title>
+    <title>Batata Bit</title>
 </head>
 <body>
     <header class="header">
@@ -118,8 +118,18 @@
 
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <ul class="footer--links">
+            <li class="footer--links--link"><a href="#">LinkedIn</a></li>
+            <li class="footer--links--link"><a href="#">CrunchBase</a></li>
+            <li class="footer--links--link"><a href="#">HackerNews</a></li>
+        </ul>
+        <div class="footer--container--batabit-icon">
+            <figure>
+                <img class="footer--batatabit-icon" src="./assets/icons/batata.svg" alt="">
+            </figure>
+            <p class="footer--container--batabit-icon--p">® Batabit 2020</p> <!-- Assign year with js -->
+        </div>
     </footer>
 </body>
 </html>
