Annoying text positioned.

--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         </section>
 
         <section class="plans">
-            <figure>
+            <div class="wrapper--bitcoinbaby">
                 <img class="plans--bitcoinbaby" src="./assets/img/bitcoinbaby.jpg" alt="Girl with bitcoins as glasses.">
-                <figcaption class="plans--bitcoinbaby-figcaption">Conócelo hoy.</figcaption> <!-- max-width: 40.0rem -->
-            </figure>
+                <p class="plans--bitcoinbaby-figcaption">Conócelo hoy.</p> <!-- max-width: 40.0rem -->
+            </div>
             <h2 class="plans--h2">Escoge el plan que mejor se ajuste a ti.</h2>
             <p class="plans--p">Cualquier plan te da acceso completo a nuestra plataforma.</p>
         </section>
