Plans linked added.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 class="header-h2">
             Batatabit te ayuda a navegar entre los diferentes precios y tendencias.
         </h2>
-        <a class="header-button" href="#">
+        <a class="header-button" href="#plans">
             <span>Conoce Nuestros Planes</span>
             <figure>
                     <img class="down-arrow" src="./assets/icons/down-arrow.svg">
@@ -111,7 +111,7 @@
             </section>
         </section>
 
-        <section class="plans">
+        <section id="plans" class="plans">
             <div class="wrapper--bitcoinbaby">
                 <img class="plans--bitcoinbaby" src="./assets/img/bitcoinbaby.jpg" alt="Girl with bitcoins as glasses.">
                 <p class="plans--bitcoinbaby-figcaption">Conócelo hoy.</p> <!-- max-width: 40.0rem -->
