--- a/index.html
+++ b/index.html
@@ -119,15 +119,39 @@
             <h2 class="plans--h2">Escoge el plan que mejor se ajuste a ti.</h2>
             <p class="plans--p">Cualquier plan te da acceso completo a nuestra plataforma.</p>
             
-            <div class="plans--card">
-                <div class="plans--card--label">Recomendado</div>
-                <p class="plans--card--yearly-pay">Pago Anual</p>
-                <p class="plans--card--price"><span>$</span> 99</p>
-                <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
-                <a class="plans--card--button" href="">
-                    <span>Escoger Este</span> 
-                    <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="">
-                </a>
+            <div class="plans--cards--slider">
+                <div class="plans--card plans--first-card">
+                    <div class="plans--card--label">Recomendado</div>
+                    <p class="plans--card--yearly-pay">Pago Anual</p>
+                    <p class="plans--card--price"><span>$</span> 99</p>
+                    <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
+                    <a class="plans--card--button" href="">
+                        <span>Escoger Este</span> 
+                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="">
+                    </a>
+                </div>
+
+                <div class="plans--card">
+                    <div class="plans--card--label">Premium</div>
+                    <p class="plans--card--yearly-pay">Pago Mensual</p>
+                    <p class="plans--card--price"><span>$</span> 19</p>
+                    <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
+                    <a class="plans--card--button" href="">
+                        <span>Escoger Este</span> 
+                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="">
+                    </a>
+                </div>
+
+                <div class="plans--card plans--last-card">
+                    <div class="plans--card--label">Lite</div>
+                    <p class="plans--card--yearly-pay">3 meses</p>
+                    <p class="plans--card--price"><span>$</span> 30</p>
+                    <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
+                    <a class="plans--card--button" href="">
+                        <span>Escoger Este</span> 
+                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="">
+                    </a>
+                </div>
             </div>
         </section>
     </main>
