--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 </div>
 
                 <div class="plans--card">
-                    <div class="plans--card--label">Premium</div>
-                    <p class="plans--card--yearly-pay">Pago Mensual</p>
-                    <p class="plans--card--price"><span>$</span> 19</p>
+                    <div class="plans--card--label">Lite</div>
+                    <p class="plans--card--yearly-pay">Pago mensual</p>
+                    <p class="plans--card--price"><span>$</span> 12</p>
                     <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
                     <a class="plans--card--button" href="">
                         <span>Escoger Este</span> 
@@ -143,9 +143,9 @@
                 </div>
 
                 <div class="plans--card plans--last-card">
-                    <div class="plans--card--label">Lite</div>
-                    <p class="plans--card--yearly-pay">3 meses</p>
-                    <p class="plans--card--price"><span>$</span> 30</p>
+                    <div class="plans--card--label">Premium</div>
+                    <p class="plans--card--yearly-pay">Pago Anual</p>
+                    <p class="plans--card--price"><span>$</span>120</p>
                     <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
                     <a class="plans--card--button" href="">
                         <span>Escoger Este</span> 
