--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <p class="plans--p">Cualquier plan te da acceso completo a nuestra plataforma.</p>
             
             <div class="plans--cards--slider">
-                <div class="plans--card plans--first-card">
+                <div class="plans--card">
                     <div class="plans--card--label">Recomendado</div>
                     <p class="plans--card--yearly-pay">Pago Anual</p>
                     <p class="plans--card--price"><span>$</span> 99</p>
@@ -142,7 +142,7 @@
                     </a>
                 </div>
 
-                <div class="plans--card plans--last-card">
+                <div class="plans--card">
                     <div class="plans--card--label">Premium</div>
                     <p class="plans--card--yearly-pay">Pago Anual</p>
                     <p class="plans--card--price"><span>$</span>110</p>
