Section 3 image implemented responsively.

--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
         </section>
 
         <section id="plans" class="plans">
-            <div class="wrapper--bitcoinbaby">
-                <img class="plans--bitcoinbaby" src="./assets/img/bitcoinbaby.jpg" alt="Girl with bitcoins as glasses.">
+            <div class="plans--bitcoinbaby">
                 <p class="plans--bitcoinbaby-figcaption">Conócelo hoy.</p> <!-- max-width: 40.0rem -->
             </div>
             <h2 class="plans--h2">Escoge el plan que mejor se ajuste a ti.</h2>
