--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="exchange-rates">
             <div class="bitcoin-svg-container">
                 <figure>
-                    <img class="bitcoin-svg"src="./assets/img/bitcoin.svg" alt="">
+                    <img class="bitcoin-svg"src="./assets/img/bitcoin.svg" alt="Bitcoin Image">
                 </figure>
             </div>
             <section>
@@ -47,28 +47,28 @@
                     <p class="coin-name">Bitcoin</p>
                     <p class="coin-price">$ 1.96</p>
                     <figure>
-                        <img src="./assets/icons/trending-down.svg" alt="">
+                        <img src="./assets/icons/trending-down.svg" alt="Trending down icon">
                     </figure>
                 </div>
                 <div class="coin-2">
                     <p class="coin-name">Ethereum</p>
                     <p class="coin-price">$ 0.07</p>
                     <figure>
-                        <img src="./assets/icons/trending-up.svg" alt="">
+                        <img src="./assets/icons/trending-up.svg" alt="Trending up icon">
                     </figure>
                 </div>
                 <div class="coin-3">
                     <p class="coin-name">Ripple</p>
                     <p class="coin-price">$ 2.25</p>
                     <figure>
-                        <img src="./assets/icons/trending-down.svg" alt="">
+                        <img src="./assets/icons/trending-down.svg" alt="Trending down icon">
                     </figure>
                 </div>
                 <div class="coin-4">
                     <p class="coin-name">Stellar</p>
                     <p class="coin-price">$ 4.96</p>
                     <figure>
-                        <img src="./assets/icons/trending-down.svg" alt="">
+                        <img src="./assets/icons/trending-down.svg" alt="Trending down icon">
                     </figure>
                 </div>
                 <div class="coins-section-last-update">
@@ -83,28 +83,28 @@
             <div class="wrapper--benefits--sections">
                 <section class="benefits--section1">
                     <figure>
-                        <img src="./assets/icons/clock.svg" alt="">
+                        <img src="./assets/icons/clock.svg" alt="Clock Icon">
                     </figure>
                     <h3>Tiempo Real</h3>
                     <p>Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
                 </section>
                 <section class="benefits--section2">
                     <figure>
-                        <img src="./assets/icons/eye.svg" alt="">
+                        <img src="./assets/icons/eye.svg" alt="Eye Icon">
                     </figure>
                     <h3>No hay tasas escondidas</h3>
                     <p>Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
                 </section>
                 <section class="benefits--section3">
                     <figure>
-                        <img src="./assets/icons/dollar-sign.svg" alt="">
+                        <img src="./assets/icons/dollar-sign.svg" alt="Dollar Sign Icon">
                     </figure>
                     <h3>Compara monedas</h3>
                     <p>No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
                 </section>
                 <section class="benefits--section4">
                     <figure>
-                        <img src="./assets/icons/check-circle.svg" alt="">
+                        <img src="./assets/icons/check-circle.svg" alt="Check Circle Icon">
                     </figure>
                     <h3>Información confiable</h3>
                     <p>Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
@@ -127,7 +127,7 @@
                     <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
                     <a class="plans--card--button" href="">
                         <span>Escoger Este</span> 
-                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="">
+                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="Arrow Icon">
                     </a>
                 </div>
 
@@ -149,7 +149,7 @@
                     <p class="plans--card--offering">*Ahorras $129 comparado al plan mensual.</p>
                     <a class="plans--card--button" href="">
                         <span>Escoger Este</span> 
-                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="">
+                        <img class="plans--card--button--arrow" src="./assets/icons/orange-right-arrow.svg" alt="Arrow Icon">
                     </a>
                 </div>
             </div>
@@ -164,7 +164,7 @@
         </ul>
         <div class="footer--container--batabit-icon">
             <figure>
-                <img class="footer--batatabit-icon" src="./assets/icons/batata.svg" alt="">
+                <img class="footer--batatabit-icon" src="./assets/icons/batata.svg" alt="Batabit icon">
             </figure>
             <p class="footer--container--batabit-icon--p">® Batabit 2020</p> <!-- Assign year with js -->
         </div>
